Add draft for Chapter 4, Concept

--- a/includes/references.bib
+++ b/includes/references.bib
@@ -295,3 +295,45 @@ Version 20191214-draf},
     url = {https://embeddedartistry.com/blog/2019/04/08/a-general-overview-of-what-happens-before-main/},
     urldate = {2023-01-21}
 }
+@online{
+    i2s_mic,
+    title = {Adafruit I2S MEMS Microphone},
+    year = 2023,
+    url = {https://learn.adafruit.com/adafruit-i2s-mems-microphone-breakout?view=all},
+    urldate = {2023-01-26}
+}
+@online{
+    i2s_mic_datasheet,
+    title = {Adafruit I2S MEMS Microphone Datasheet},
+    year = 2023,
+    url = {https://cdn-shop.adafruit.com/product-files/3421/i2S+Datasheet.PDF},
+    urldate = {2023-01-26}
+}
+@online{
+    i2s_mic_pinout,
+    title = {Adafruit I2S MEMS Microphone Pinout},
+    year = 2023,
+    url = {https://learn.adafruit.com/adafruit-i2s-mems-microphone-breakout/pinouts},
+    urldate = {2023-01-26}
+}
+@online{
+    pdm_mic,
+    title = {Adafruit PDM MEMS Microphone},
+    year = 2023,
+    url = {https://learn.adafruit.com/adafruit-pdm-microphone-breakout/},
+    urldate = {2023-01-26}
+}
+@online{
+    pdm_mic_datasheet,
+    title = {Adafruit PDM MEMS Microphone Datasheet},
+    year = 2023,
+    url = {https://cdn-learn.adafruit.com/assets/assets/000/049/977/original/MP34DT01-M.pdf},
+    urldate = {2023-01-26}
+}
+@online{
+    pdm_mic_pinout,
+    title = {Adafruit PDM MEMS Microphone Pinout},
+    year = 2023,
+    url = {https://learn.adafruit.com/adafruit-pdm-microphone-breakout/pinouts},
+    urldate = {2023-01-26}
+}
