--- a/thesis.tex
+++ b/thesis.tex
@@ -184,6 +184,24 @@
 \\
 \textbf{I2S}\>Inter-IC Sound
 \\
+\textbf{$V_{DD}$}\>Supply Voltage
+\\
+\textbf{GND}\>Ground
+\\
+\textbf{DOUT}\>Data Out
+\\
+\textbf{SEL}\>(Channel) Select
+\\
+\textbf{BCLK}\>Bit Clock
+\\
+\textbf{LRCLK}\>Right/Left clock, also known as Word Select
+\\
+\textbf{WS}\>Word Select
+\\
+\textbf{DAT}\>PDM Data OUT
+\\
+\textbf{CLK}\>PDM Clock
+\\
 \textbf{ISA}\>Instruction Set Architecture
 \\
 \textbf{ML}\>Machine Learning
