Add more in-depth explanation of the UltraTrail architecture

--- a/thesis.tex
+++ b/thesis.tex
@@ -218,6 +218,16 @@
 \\
 \textbf{GRU}\>Grated Recurrent Unit
 \\
+\textbf{OPU}\>Output Processing Unit
+\\
+\textbf{WMEM}\>Weight Memory
+\\
+\textbf{BMEM}\>Bias Memory
+\\
+\textbf{FMEM}\>Feature Memory
+\\
+\textbf{LMEM}\>Local Memory
+\\
 \textbf{IoT}\>Internet of Things
 \\
 \textbf{MSB}\>Most Significant Bit
