Expand upon the RISC-V and ARM comparison

--- a/includes/references.bib
+++ b/includes/references.bib
@@ -30,6 +30,13 @@
   url = {https://riscv.org/},
   urldate = {2022-12-06}
 }
+@online{riscv_about,
+  %author = {Add author if known},
+  title = {About RISC-V},
+  year = 2023,
+  url = {https://riscv.org/about},
+  urldate = {2023-02-28}
+}
 @book{riscv_spec,
 	title = {The RISC-V Instruction Set Manual, Volume I: User-Level ISA, Document
 Version 20191214-draf},
