Improve phrasing in Rust/Why Rust section

--- a/includes/references.bib
+++ b/includes/references.bib
@@ -23,6 +23,11 @@
   year = 2023,
   url = {https://insights.stackoverflow.com/survey/2020#technology-most-loved-dreaded-and-wanted-languages-loved},
   urldate = {2023-01-09} }
+@online{cpp11,
+  title = {C++ 11},
+  year = 2023,
+  url = {https://en.cppreference.com/w/cpp/11},
+  urldate = {2023-03-01} }
 @online{riscv,
   %author = {Add author if known},
   title = {RISC-V},
