Rework 'Embedded Rust' section

--- a/thesis.tex
+++ b/thesis.tex
@@ -178,6 +178,8 @@
 \\
 \textbf{SoC}\>System-on-a-Chip
 \\
+\textbf{UART}\>Universal Asynchronous Receiver-Transmitter
+\\
 \textbf{PDM}\>Pulse Density Modulation
 \\
 \textbf{PCM}\>Pulse Code Modulation
