Add additional abbreviations of fundamentals

--- a/thesis.tex
+++ b/thesis.tex
@@ -247,6 +247,10 @@
 \textbf{SVD}\>System View Description
 \\
 \textbf{VA}\>Voice Assistant
+\\
+\textbf{JIT}\>Just-In-Time compiler
+\\
+\textbf{JVM}\>Java Virtual Machine
 \end{tabbing}
 \cleardoublepage
 
