Remove second supervisor and add names of graduate advisors

--- a/includes/titlepage.tex
+++ b/includes/titlepage.tex
@@ -31,18 +31,18 @@
 		\hfill
 		\begin{minipage}{0.48\textwidth}
 			\centering
-			{\small\bfseries Second Supervisor}\\[0.3cm]
-			{\large TODO: NAME}\\[2mm]
+			{\small\bfseries Graduate Advisor}\\[0.3cm]
+			{\large Christoph Gross}\\[2mm]
 			{\footnotesize Faculty of Science\\
 			Department of Computer Science\\[1.5mm]
-			TODO: CHAIR\\
+			Embedded Systems\\
 			University of Tübingen}
 		\end{minipage}%
 		\vspace{1.5cm}
 		\begin{minipage}{0.48\textwidth}
 			\centering
 			{\small\bfseries Graduate Advisor}\\[0.3cm]
-			{\large TODO: NAME}\\[2mm]
+			{\large Adrian Frischknecht}\\[2mm]
 			{\footnotesize Faculty of Science\\
 				Department of Computer Science\\[1.5mm]
 				Embedded Systems\\
@@ -52,7 +52,7 @@
 		\begin{minipage}{0.48\textwidth}
 			\centering
 			{\small\bfseries Graduate Advisor}\\[0.3cm]
-			{\large TODO: NAME}\\[2mm]
+			{\large Paul Palomero Bernardo}\\[2mm]
 			{\footnotesize Faculty of Science\\
 				Department of Computer Science\\[1.5mm]
 				Embedded Systems\\
