Add source for I2S wiring diagram

--- a/includes/references.bib
+++ b/includes/references.bib
@@ -349,3 +349,10 @@ Version 20191214-draf},
     url = {https://learn.adafruit.com/adafruit-pdm-microphone-breakout/pinouts},
     urldate = {2023-01-26}
 }
+@online{
+    i2s_wiring,
+    title = {Setup of the I2S microphone with a Raspberry Pi},
+    year = 2023,
+    url = {https://learn.adafruit.com/adafruit-i2s-mems-microphone-breakout?view=all#wiring-for-mono-mic-3061606},
+    urldate = {2023-03-11}
+}
