Add clarification about RTOS

--- a/thesis.tex
+++ b/thesis.tex
@@ -238,6 +238,8 @@
 \\
 \textbf{OS}\>Operating System
 \\
+\textbf{RTOS}\>Real-Time Operating System
+\\
 \textbf{MCU}\>Micro-Controller
 \\
 \textbf{PAC}\>Peripheral Access Crate
