--- a/includes/definitions.tex
+++ b/includes/definitions.tex
@@ -12,7 +12,7 @@
 
 \def\authorsurname{Schammo}
 \def\authorfirstname{Tom}
-\def\title{Implementierung und Analyse verschiedener Eingabequellen auf der Ultratrailarchitektur}
+\def\title{Implementation and analysis of different input sources on the Ultratrail architecture}
 \ifthenelse{\boolean{english}}
     {\def\thesiskind{Bachelor's Thesis Computer Science}}
     {\def\thesiskind{Bachelorarbeit Informatik}}
