--- a/includes/definitions.tex
+++ b/includes/definitions.tex
@@ -12,7 +12,7 @@
 
 \def\authorsurname{Schammo}
 \def\authorfirstname{Tom}
-\def\title{Implementation and analysis of different input sources on the Ultratrail architecture}
+\def\title{Implementation and Analysis of different Input Sources on the Ultratrail Architecture}
 \ifthenelse{\boolean{english}}
     {\def\thesiskind{Bachelor's Thesis Computer Science}}
     {\def\thesiskind{Bachelorarbeit Informatik}}
