--- a/includes/abstractger.tex
+++ b/includes/abstractger.tex
@@ -1,7 +1,7 @@
 % =============================================================================
 % FILE NAME : abstractger.tex
 % DEPARTMENT: University of Tuebingen
-% AUTOR     : Paul Palomero Bernardo
+% AUTOR     : Tom Schammo
 % =============================================================================
 % CONTENT   : Include for abstract (german)
 % =============================================================================
