--- a/includes/abstract.tex
+++ b/includes/abstract.tex
@@ -10,7 +10,8 @@ This thesis sets out to implement keyword-spotting on the UltraTrail architectur
 One additional goal is extending the Rust ecosystem by adding support for UltraTrail to Rust.
 To achieve this, UltraTrail is added to the PAC and its drivers are implemented in the HAL.
 Then the implementation of the $I^2S$ and PDM drivers are tested.
-Testing reveals that the microphone drivers do not work as expected.
-While fixing a few bugs, it was not possible to get the microphones working as
-desired, so keyword-spotting could not be implemented.
-However, the UltraTrail driver has successfully been implemented and tested.
+Testing reveals that the microphone drivers do not work as expected and despite
+some issues, it was not possible to get the microphones working as desired,
+so keyword-spotting could not be implemented.
+However, the UltraTrail driver has successfully been implemented and tested so that
+now future research can be conducted on the efficacy of keyword-spotting on the UltraTrail.
