Fix abstract, add translation

--- a/includes/abstractger.tex
+++ b/includes/abstractger.tex
@@ -10,7 +10,9 @@ Zusätzlich soll das Rust Ecosystem erweitert werden durch implementierung des U
 Um dies zu errreichen wird UltraTrail zu der PAC hinzugefügt und die Treiber in der HAL implementiert.
 Anschließend werden die Implementierungen der $I^2S$ und PDM treiber getestet.
 Dies offenbart, dass die Mikrofontreiber nicht so wie erwartet funktionieren,
-und nach dem fixen mehrerer Bugs ist es immer noch nicht möglich die Mikrofone wie gewünscht
-zu laufen zu bringen.
+und trotz dem lösen mehrerer Bugs ist es immer noch nicht möglich die Mikrofone wie gewünscht
+zu nutzen.
 Daher konnte keyword-spotting erstmal nicht implementiert werden.
-Allerdings wurde der UltraTrail Treiber erfolgreich implementiert und getestet.
+Allerdings wurde der UltraTrail Treiber erfolgreich implementiert und getestet,
+so dass zukünftige Arbeiten sich auf das effiziente Implementieren von keyword-spotting
+fokussieren können.
