Remove 'list of tables'

--- a/thesis.tex
+++ b/thesis.tex
@@ -268,11 +268,11 @@
 % =============================================================================
 % List of tables
 % =============================================================================
-\small\normalsize
-\addcontentsline{toc}{chapter}{\listtablename}
-\listoftables
-\small\normalsize
-\cleardoublepage
+% \small\normalsize
+% \addcontentsline{toc}{chapter}{\listtablename}
+% \listoftables
+% \small\normalsize
+% \cleardoublepage
 
 % =============================================================================
 % "I did this myself"
