Add detail to PDM microphone setup

--- a/includes/references.bib
+++ b/includes/references.bib
@@ -151,6 +151,11 @@ Version 20191214-draf},
     url = {https://github.com/pulp-platform/pulpissimo},
     urldate = {2022-12-23}
 }
+@book{pulp_board,
+	title = {OCEAN 12 - Microphone Wake-Up Demonstrator Development Board Reference Manual},
+	author = {Samer Kharabish and Leonardo Govoni},
+	year = {2021}
+}
 @online{alexa,
     title = {Amazon Alexa},
     year = 2022,
