Elaborate upon PDM setup and development

--- a/includes/references.bib
+++ b/includes/references.bib
@@ -156,6 +156,12 @@ Version 20191214-draf},
 	author = {Samer Kharabish and Leonardo Govoni},
 	year = {2021}
 }
+@online{pulpissimo_datasheet,
+    title = {Pulpissimo datasheet},
+    year = 2021,
+    url = {https://github.com/pulp-platform/pulpissimo/blob/master/doc/datasheet/datasheet.pdf},
+    urldate = {2023-03-13}
+}
 @online{alexa,
     title = {Amazon Alexa},
     year = 2022,
