--- a/includes/abstract.tex
+++ b/includes/abstract.tex
@@ -7,11 +7,11 @@
 % =============================================================================
 
 This thesis sets out to implement keyword-spotting on the UltraTrail architecture.
-One additional goal is extending the Rust ecosystem by adding support for UltraTrail to Rust.
+An additional goal is to extend the Rust ecosystem by adding support for UltraTrail to Rust.
 To achieve this, UltraTrail is added to the PAC and its drivers are implemented in the HAL.
-Then the implementation of the $I^2S$ and PDM drivers are tested.
+The $I^2S$ and PDM driver implementations are then tested.
 Testing reveals that the microphone drivers do not work as expected and despite
-resolving some issues, it was not possible to get the microphones working as desired,
+resolving some issues, it was not possible to get the microphones to work as desired,
 so keyword-spotting could not be implemented.
-However, the UltraTrail driver has successfully been implemented and tested so that
-now future research can be conducted on the efficacy of keyword-spotting on the UltraTrail.
+However, the UltraTrail driver has been successfully implemented and tested so that
+now future research can be conducted on the effectiveness of keyword-spotting on the UltraTrail.
