Improve wording and translation of abstract

--- a/includes/abstract.tex
+++ b/includes/abstract.tex
@@ -7,6 +7,7 @@
 % =============================================================================
 
 This thesis sets out to implement keyword-spotting on the UltraTrail architecture.
+To that end, different input sources are implemented and analyzed.
 An additional goal is to extend the Rust ecosystem by adding support for UltraTrail to Rust.
 To achieve this, UltraTrail is added to the PAC and its drivers are implemented in the HAL.
 The $I^2S$ and PDM driver implementations are then tested.
@@ -14,4 +15,4 @@ Testing reveals that the microphone drivers do not work as expected and despite
 resolving some issues, it was not possible to get the microphones to work as desired,
 so keyword-spotting could not be implemented.
 However, the UltraTrail driver has been successfully implemented and tested so that
-now future research can be conducted on the effectiveness of keyword-spotting on the UltraTrail.
+future research can be conducted on the effectiveness of keyword-spotting on the UltraTrail.
