--- a/includes/acknowledgements.tex
+++ b/includes/acknowledgements.tex
@@ -1,1 +1,7 @@
-Danksagung (falls gewünscht)
+I want to thank my parents for helping me finance studying abroad.
+Also, a big thank-you goes out to all the people that took the time
+and put in the effort to read through my thesis and give me their feedback.
+So thank you, Felix, Inés, Abdu and Luis.
+Finally, a big thank-you to my supervisor Christoph Gross, as well
+as Adrian Frischknecht and Paul Palomero Bernardo who helped me
+with this thesis and put up with all my questions.
